--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
         "cogs.apply",
         "cogs.responses",
         "cogs.errors",
-        "cogs.help"
+        "cogs.help",
+        "cogs.api"
     ],
 
     "colour-dev": "Pink",
